<resources>
    <string name="app_name">SHAAHAR</string>
    <string name="breakfast">Breakfast</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="student_id">Admin Id</string>
    <string name="pswrd">Password</string>
    <string name="name">Name</string>
    <string name="hostel">Hostel</string>
    <string name="sorry">Sorry</string>
    <string name="nothing_to_show">Nothing to Show</string>
    <string name="appName">Food Saviour</string>
    <string name="item_1">Pao Bhaji, Tea, Milk</string>
    <string name="item_2">Rajma, Rice, Roti, Aaloo Sabzi, Raita</string>
    <string name="item_3">Samosa, Tea, Coffee</string>
    <string name="item_4">Dal, Rice, Roti, Paneer Sabzi, Icecream</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="dashboard">Dashboard</string>
    <string name="student_record">Student Record</string>
    <string name="menu">Menu</string>
    <string name="feedback">Feedback</string>
    <string name="suggestions">Suggestions</string>
    <string name="logout">Logout</string>
    <string name="admin_id">Admin Id</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sampLe_name">Rahul Sharma</string>
    <string name="sample_email">rahulsharma@gmail.com</string>
    <string name="sample_phone">1234567890</string>
    <string name="sample_branch">CSE</string>
    <string name="sample_room_no">102</string>
    <string name="edit">Edit</string>
    <string name="tagline">The Aahar Admin</string>
    <string name="nothing">No contents to display</string>
</resources>
