<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample2"
    android:orientation="vertical"
    tools:context=".StudentRecord">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/user_profile"
                android:fontFamily="@font/rajdhani_semibold"
                android:text="@string/sampLe_name"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/user_profile"
                android:drawableStart="@drawable/email"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/sample_email"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/user_profile"
                android:drawableStart="@drawable/phone"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/sample_phone"
                android:textAllCaps="false"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/user_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_phone"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/user_profile"
                android:drawableStart="@drawable/branch_grey"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/sample_branch"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/user_room_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_branch"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/user_profile"
                android:drawableStart="@drawable/home_grey"
                android:fontFamily="@font/rajdhani_medium"
                android:text="@string/sample_room_no"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@+id/user_room_no"
                android:layout_alignParentEnd="true"
                android:layout_margin="20dp"
                android:background="@drawable/button_curved"
                android:fontFamily="@font/rajdhani_semibold"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_curved"
        android:fontFamily="@font/rambla_bold"
        android:text="@string/edit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/recycler_student_record"/>-->
</RelativeLayout>