<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".SignIn">

    <ImageView
        android:contentDescription="@string/signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sample2"
    />
<ImageView
    android:contentDescription="@string/signin"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/food3"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/text_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/signin"
            android:src="@drawable/person_white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_id"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_layout_pswrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_layout_email"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/signin"
            android:src="@drawable/lock" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_user_pswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pswrd"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_layout_pswrd"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blue"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        custom:pb_colorComplete="#2BAD31"
        custom:pb_colorNormal="@color/blue"
        custom:pb_colorPressed="@color/blue"
        custom:pb_colorProgress="@color/white"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading"
        custom:pb_textError="Error"
        custom:pb_colorError="@color/red_error"/>



</RelativeLayout>